5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1642_2450.log
== TEST (2019-04-15 13:23:27) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
     print(nome1.upper())
		print(nome2.upper())
		
else:
	 print(nome2.upper())
		print(nome1.upper())
-- ERROR:
File "XXXX", line 6
    print(nome2.upper())
                       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:44) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
     print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
		print(nome1.upper())
-- ERROR:
File "XXXX", line 6
    print(nome2.upper())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:49) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
		print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:14) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
      print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:15) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
      print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:48) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	print(nome2.upper())
    print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:25:08) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
   print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:25:22) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
   print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:25:35) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	 print(nome2.upper())
   print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:25:54) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
	  print(nome2.upper())
      print(nome1.upper())
-- ERROR:
File "XXXX", line 10
    print(nome1.upper())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:26:09) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
   print(nome2.upper())
   print(nome1.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:10) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
   print(nome2.upper())
   print(nome1.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:39) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
   print(nome2.upper())
   print(nome1.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:39) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
   print(nome2.upper())
   print(nome1.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:39) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1.upper())
      print(nome2.upper())
		
else:
   print(nome2.upper())
   print(nome1.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:08) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1)
      print(nome2)
		
else:
   print(nome2)
   print(nome1)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:57) 
-- CODE:
nome1 = input("digite o nome: ")
nome2 = input("digite o nome: ")

if  (nome1 > nome2):
      print(nome1)
      print(nome2)
		
else:
   print(nome2)
   print(nome1)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
